Basics. More basics.

--- a/_posts/2021-04-17-fleece.md
+++ b/_posts/2021-04-17-fleece.md
@@ -1,7 +1,7 @@
 ---
 title: Fleece
 subtitle: Keeping the little plants warm
-img: fleece
+image: /assets/image/photo/fleece.jpg
 desc: Keeping the little plants warm
 ---
 
