--- a/_posts/2021-10-11-liff2021.md
+++ b/_posts/2021-10-11-liff2021.md
@@ -3,6 +3,7 @@ title: LIFF2021
 subtitle: It's back!
 image: /assets/image/photo/liff2021.png
 desc: The return of the Leeds International Film Festival
+layout: post
 ---
 
 Here we go! The 35th Leeds International Film Festival launches its programme this week, ahead of the first screening in November. I think its fair to say I'm a bit excited. 
