Update post about AWS build

--- a/_posts/2023-08-07-webstack.md
+++ b/_posts/2023-08-07-webstack.md
@@ -9,6 +9,8 @@ I've not done a how-it-all-works post on here before. Truth be told, quite often
 
 But no more! No. For I have re-organised, redesigned and reimplemented this site from top to bottom. So here's a whistlestop tour through the web-stack. 
 
+> _September 2023 update: Yikes! This post is already outdated. I've started moving to automatically triggered AWS builds which seems like an exciting step!_
+
 ## Site code
 The content of the site is essentially a bunch of text files. They're plain text, with formatting done in Markdown. This makes them _very simple_ to write. To make them look a little better than plain text though, and sort out all the pesky HTML we lean on Jekyll. There are heaps of static site generators out there. I first discovered Jekyll years ago so have largely stuck with it because its what I know.
 
