--- a/rnp/content/posts/2020-11-18-simple.md
+++ b/rnp/content/posts/2020-11-18-simple.md
@@ -1,6 +1,7 @@
 +++
 date = '2020-11-18T00:00:00Z'
 title = 'A simple test post'
+slug = 'simple'
 +++
 
 This is a simple test post. It doesn't really say a lot.
