--- a/rnp/content/posts/2025-10-30-liff2025.md
+++ b/rnp/content/posts/2025-10-30-liff2025.md
@@ -3,7 +3,7 @@ title: LIFF2025
 ---
 
 It's that time again! Armed with 30+ tickets (ok, we've scaled back a bit in recent years)
-and a pencil-marked festival programme, I'm about to take a week of work to do very little
+and a pencil-marked festival programme, I'm about to take a week off work to do very little
 except sit in a dark room and watch films. I can't wait.
 
 I've already forgotten what I've got picked out but that shouldn't matter. There's a big
