--- a/rnp/content/posts/2025-10-31-la-grazia.md
+++ b/rnp/content/posts/2025-10-31-la-grazia.md
@@ -5,7 +5,7 @@ title: La Grazia
 My first film of LIFF2025 is an interesting one. I don't know director Paolo Sorrentino
 particularly well but this is a slow paced study of an unusual life. We join the president
 of Italy, still mourning the death of his wife, and muddling through the last days of
-his administration. He's much respected. He's made it to where he is my being slow,
+his administration. He's much respected. He's made it to where he is by being slow,
 methodical and precise. Or, less favourably, by avoiding taking any difficult decisions.
 He's earned his nickname of "reinforced concrete".
 
