--- a/rnp/content/posts/2025-11-01-dreams.md
+++ b/rnp/content/posts/2025-11-01-dreams.md
@@ -8,7 +8,7 @@ My first dud of this year's festival.
 The premise is interesting enough - Jessica Chastain is a high-powered American,
 all business-suits and chauffeured cars, who has taken a younger Mexican lover
 from the ballet academy she sponsors. Suddenly, he's no longer a bit on the side
-in Mexico but has smuggled himself into the US and inserted himself into here life.
+in Mexico but has smuggled himself into the US and inserted himself into her life.
 
 Unfortunately, I never really liked any of the characters.
 At some point I found myself wondering why I was watching a small story of unpleasant
