--- a/rnp/content/posts/2025-11-03-alpha.md
+++ b/rnp/content/posts/2025-11-03-alpha.md
@@ -1,7 +1,20 @@
 ---
 title: "Alpha"
 date: 2025-11-03T15:15:00+00:00
-draft: true
 ---
 
-Placeholder for review.
+A blood born virus that turns the body slowly to marble.
+A hospital-ward of slowly petrifying patients.
+Growing up as an immigrant teenage girl with a junkie uncle.
+Julia Ducournau's films always go in pretty hard and this is no exception.
+
+There are obvious AIDs parallels. But the film never really gets too bogged down in the illness
+(despite the astonishing visuals of the increasingly stony afflicted).
+This is a film about trauma, worry and loss. It's bound up in the mother-daughter relationship,
+as the emaciated spectre of uncle Amin leers and chuckles from the sidelines.
+
+I loved it. I'm not totally sure I understand it. But it doesn't matter.
+It was a wild roller-coaster of a film. I had no idea at all where it was taking me and enjoyed
+every moment of it. Ducournau remains firmly on my "watch anything she makes" list.
+
+Bechdel pass, natch.
