--- a/rnp/content/posts/2025-11-04-our-land.md
+++ b/rnp/content/posts/2025-11-04-our-land.md
@@ -1,7 +1,22 @@
 ---
 title: "Our Land"
 date: 2025-11-04T20:30:00+00:00
-draft: true
 ---
 
-Placeholder for review.
+A really powerful documentary. It centres on the right-to-roam movement,
+and how their aims come into conflict with the landed gentry of the country.
+Several landowners pop up and manage to be not-totally-awful human beings,
+treading a fine line between holding on to their inherited wealth and, somewhat grudgingly,
+consenting to share it.
+
+The villain of the piece, who's name I didn't catch and don't care to research,
+calmly looked in all directions and said "I own all that I can see. This is my garden.
+And it's a fucking big garden". He went on to explain how Black people didn't really
+belong in the countryside, and how the general public were mostly too "fucking stupid"
+to appreciate the land. A horrible person, through and through.
+
+The true star of this is Nadia Shaikh, who is both fierce and compassionate,
+outspoken and humble. She's prepared to admit that she understands the landowners'
+very human desire to hang on to what they possess, all the while advocating for change
+that will benefit those not born into land ownership.
+An inspiring spokesperson for the movement.
