--- a/rnp/content/posts/2025-11-08-chao.md
+++ b/rnp/content/posts/2025-11-08-chao.md
@@ -3,7 +3,18 @@ title: "ChaO"
 date: 2025-11-08T10:30:00+00:00
 tags: [liff25, "Leeds international film festival"]
 screening-number: 21
-draft: true
 ---
 
-Placeholder for review.
+An impressive, hand-crafted animated retelling of the Little Mermaid,
+transplanted to a version of Shanghai in which big business and the King of
+the Sea are quarrelling. Only the union of the Fish Princess and uh...
+some junior guy at a shipping company can bring peace and unity.
+
+It's fine. I did like a lot of the animation, and there were some lovely
+scenes (including a surprisingly good car chase!), but I grew pretty tired
+of the lead guy's entitled male whinging. I know, I know, the whole story
+was a journey of developing his character and learning to be a better person
+but... if you don't like the breakfast your fish princess wife makes for
+you, maybe you should make your own breakfast, you chump. Instead of waiting
+for her single female friend to step in and teach her how to cook like a
+good wife. Urgh.
