--- a/rnp/content/posts/2025-11-08-dog-of-god.md
+++ b/rnp/content/posts/2025-11-08-dog-of-god.md
@@ -3,7 +3,20 @@ title: "Dog of God"
 date: 2025-11-08T12:30:00+00:00
 tags: [liff25, "Leeds international film festival"]
 screening-number: 22
-draft: true
 ---
 
-Placeholder for review.
+Pros:
+
+- This had some very cool visuals (I love rotoscoped animation!)
+- Lots of cool atmosphere (fog, churches, beasts, witchcraft)
+- Some of it was pretty funny.
+
+Cons:
+
+- Too many strands of story, which meant each was underdeveloped.
+- Not enough werewolf.
+- Felt way too long, even though it was a pretty tight 90mins.
+
+I do think there's a good film in there, and a lot of talent, but this was too muddled
+for me. The werewolf plot, evil priest plot, witchcraft plot and impotent baron plot
+were basically all separate stories. In trying to do them all, none of them went very far.
