--- a/rnp/content/posts/2025-11-10-trains.md
+++ b/rnp/content/posts/2025-11-10-trains.md
@@ -3,7 +3,12 @@ title: "Trains"
 date: 2025-11-10T18:00:00+00:00
 tags: [liff25, "Leeds international film festival"]
 screening-number: 26
-draft: true
 ---
 
-Placeholder for review.
+Archive footage spanning decades of European train journeys.
+This was an interesting effort but I'm not sure it was edited as tightly as it could have
+been.
+After a pretty tense and at times gruesome middle section which covered the war wounded,
+Nazis on a train and all that Nazis do, the final third or so just sort of fizzled out.
+
+Though I could imagine it'd be pretty cool with live music accompaniment.
