Fix up internal link

--- a/rnp/content/posts/2026-01-14-books-2025.md
+++ b/rnp/content/posts/2026-01-14-books-2025.md
@@ -13,7 +13,9 @@ They'd have definitely bumped up my score.
 I also read more books by women than men.
 This shouldn't really feel like a massive achievement but I was surpised by how it did take a bit of effort - deliberately pushing a book to the front of the queue here and there.
 
-[The full list is available over here](/rnp/content/lists/books-2025.md). What follows are a few of my favourite discoveries of the year. There were a few re-reads (JG Ballard's _Cocaine Nights_, Susanna Clark's _Piranesi_) which I love, but don't feel the need to feature here. These are new-to-me books and authors that I really enjoyed.
+[The full list is available over here]( {{< ref "/lists/books-2025.md" >}} ).
+What follows are a few of my favourite discoveries of the year.
+There were a few re-reads (JG Ballard's _Cocaine Nights_, Susanna Clark's _Piranesi_) which I love, but don't feel the need to feature here. These are new-to-me books and authors that I really enjoyed.
 
 ## Benjamin Myers - Beastings
 
